--- a/LOO_projeto/src/View/FormReserva.form
+++ b/LOO_projeto/src/View/FormReserva.form
@@ -261,6 +261,9 @@
                 </Property>
                 <Property name="enabled" type="boolean" value="false"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonExcluirActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JButton" name="jButtonListar">
               <Properties>
