--- a/LOO_projeto/src/View/FormCadastroCliente.form
+++ b/LOO_projeto/src/View/FormCadastroCliente.form
@@ -65,21 +65,21 @@
                                   <EmptySpace min="-2" pref="6" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" attributes="0">
                                       <Group type="102" alignment="0" attributes="0">
-                                          <Group type="103" groupAlignment="0" attributes="0">
-                                              <Component id="jTextFieldCPF" alignment="0" min="-2" pref="130" max="-2" attributes="0"/>
-                                              <Component id="jTextFieldNome" alignment="0" min="-2" pref="247" max="-2" attributes="0"/>
-                                          </Group>
-                                          <EmptySpace pref="84" max="32767" attributes="0"/>
-                                      </Group>
-                                      <Group type="102" alignment="0" attributes="0">
                                           <Component id="jTextFieldCodigo" min="-2" pref="28" max="-2" attributes="0"/>
                                           <EmptySpace max="32767" attributes="0"/>
                                           <Component id="jLabelModo" min="-2" max="-2" attributes="0"/>
                                       </Group>
+                                      <Group type="102" attributes="0">
+                                          <Group type="103" groupAlignment="0" attributes="0">
+                                              <Component id="jTextFieldNome" min="-2" pref="463" max="-2" attributes="0"/>
+                                              <Component id="jTextFieldCPF" alignment="0" min="-2" pref="130" max="-2" attributes="0"/>
+                                          </Group>
+                                          <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                                      </Group>
                                   </Group>
                               </Group>
                               <Group type="102" alignment="1" attributes="0">
-                                  <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                                  <EmptySpace min="0" pref="262" max="32767" attributes="0"/>
                                   <Component id="jToggleButtonCancela" min="-2" pref="124" max="-2" attributes="0"/>
                                   <EmptySpace min="-2" pref="38" max="-2" attributes="0"/>
                                   <Component id="jToggleButtonConfirma" min="-2" pref="124" max="-2" attributes="0"/>
